# diit-prog-pr3

./: CMakeLists.txt  README.md
include/: config.h  double.h  sequence.h
src/: main.cpp
src/lib/: double.cpp  sequence.cpp
tests/: test_double.cpp  test_sequence.cpp
